--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Jura:wght@400;500&family=Monoton&family=Scheherazade&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <section>
-        <section> <img src="images/zone031wide.jpg" alt="" id="header-image">  </section>
+        <section> <h1>Zone031</h1>  </section>
             <div>
                 <ul id="nav" class="list-group-horizontal row main-navigation-list">
                     <li class="col-4 col-md-2 list-group-item"><a href="#"><span>Home</span></a></li>
