add text and all pages

--- a/media.html
+++ b/media.html
@@ -20,15 +20,15 @@
                 <ul id="nav" class="nav nav-tabs">
                     <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link you-are-here">Media</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="#" class="nav-link">The Game</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="#" class="nav-link">Tournaments</a></li>
+                    <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
+                    <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
                     <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
-                            <a href="#" class="dropdown-item">Feydakin</a>
-                            <a href="#" class="dropdown-item">Piraya</a>
+                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                            <a href="piraya.html" class="dropdown-item">Piraya</a>
                         </div>
                     </li>
-                    <li class="col-4 col-md-2 nav-item"><a href="#" class="nav-link">About us</a></li>
+                    <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
                 </ul>
             </div>
         </section>
@@ -37,7 +37,7 @@
             <div class="col-md-4">
                 <h2>Twitch</h2> 
                     <p>See </p>
-                <iframe id="twitch-video-media" src="https://player.twitch.tv/?video=747031716&parent=marcusaureliuslinden.github.io/zone031-test/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe id="twitch-video-media" src="https://player.twitch.tv/?video=747031716&parent=https://marcusaureliuslinden.github.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-4">
              <h2>Facebook</h2>
