--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <ul id="nav" class="nav nav-tabs">
                     <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link you-are-here">Home</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="#" class="nav-link">The Game</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="#" class="nav-link">Tournaments</a></li>
+                    <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
+                    <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
                     <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
-                            <a href="#" class="dropdown-item">Feydakin</a>
-                            <a href="#" class="dropdown-item">Piraya</a>
+                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                            <a href="piraya.html" class="dropdown-item">Piraya</a>
                         </div>
                     </li>
-                    <li class="col-4 col-md-2 nav-item"><a href="#" class="nav-link">About us</a></li>
+                    <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
                 </ul>
             </div>
         </section>
