minor tweaks no big additions or changes

--- a/feydakin.html
+++ b/feydakin.html
@@ -33,20 +33,25 @@
             </div>
         </section>
     </header>
-    <section>
-        <h2>Players</h2>
-        <div class="col-md-4 player-card">
-            <div>
-                <img src="" alt="">
-                <h5>Gottemaja</h5>
-            </div>
-        </div>
-    </section>
-    <section>
-        <h2>History</h2>
-        <p>
-            Stuff. A lot of stuff.
-        </p>
-    </section>
+    <main  id="feydakin-main">
+        <section>
+            <h2>Players</h2>
+                <div class="card-columns">
+                    <div class="card">
+                            <img src="assets/css/images/jag.jpg" class="card-image-top" alt="Gottemaja">
+                        <div class="card-body">
+                            <h4 class="player-name">Gottemaja</h4>
+                            <p>Some information about the player</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section>
+            <h2>History</h2>
+            <p>
+                Stuff. A lot of stuff.
+             </p>
+        </section>
+    </main>
     </body>
 </html>
