--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marcus Linden">
+    <meta name="description" content="zone031">
+    <meta name="keywords" content="lasertag, laser tag, gothenburg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
@@ -22,12 +25,7 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
-                        <div class="dropdown-menu">
-                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
-                            <a href="piraya.html" class="dropdown-item">Piraya</a>
-                        </div>
-                    </li>
+                    <li class="col-4 col-md-2 nav-item"><a href="feydakin.html" class="nav-link">Feydakin</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
                 </ul>
             </div>
