add feydakin player cards

--- a/feydakin.html
+++ b/feydakin.html
@@ -36,15 +36,82 @@
     <main  id="feydakin-main">
         <section>
             <h2>Players</h2>
-                <div class="card-columns">
-                    <div class="card">
-                            <img src="assets/css/images/jag.jpg" class="card-image-top" alt="Gottemaja">
-                        <div class="card-body">
-                            <h4 class="player-name">Gottemaja</h4>
-                            <p>Some information about the player</p>
-                        </div>
+                <div class="row row-cols-1 row-cols-md-3"> 
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Mumin (C)</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
                     </div>
-                </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Bambi</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/smiley.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Smiley</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/jag.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Gottemaja</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/slaanesh.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Slaanesh</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/supair.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Supair</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/felix.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Jae Hong</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/skipp.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">Skipp</div>
+                                <div class="card-text">He claimed to have retired from lasertag, still he suddenly reappears in the dark 
+                                when the stars align to create havoc in your defence. 
+                                </div>
+                            </div>
+                        </div>  
+                    </div>
+                </div>     
         </section>
         <section>
             <h2>History</h2>
