add style and content to feydakin & tournaments

--- a/feydakin.html
+++ b/feydakin.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css2?family=Monoton"/>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
@@ -35,13 +36,26 @@
     </header>
     <main  id="feydakin-main">
         <section>
+            <h2>Feydakin</h2>
+                <p>
+                The mythos of the Feydakin players is as dark as the arena during power failure. The earthly counterpart to 
+                the death commandos Fedaykin of Arrakis, Feydakin excel at splitting defences, destroying bases and eliminating 
+                their opponents. 
+                </p>
+                <p>
+                Feydakin boasts almost a century of collective player experience. As well as being some of the best players in the world,
+                every Feydakin player is also an innovator having honed and developed a unique playstyle from scratch.
+                </p>
+        </section>
+
+        <section>
             <h2>Players</h2>
                 <div class="row row-cols-1 row-cols-md-3"> 
                     <div class="col mb-4"> 
                         <div class="card h-100">
                             <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Mumin (C)</div>
+                                <div class="card-title fey-plname">Mumin (C)</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -50,7 +64,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Bambi</div>
+                                <div class="card-title fey-plname">Bambi</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -59,7 +73,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/smiley.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Smiley</div>
+                                <div class="card-title fey-plname">Smiley</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -68,7 +82,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/jag.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Gottemaja</div>
+                                <div class="card-title fey-plname">Gottemaja</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -77,7 +91,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/slaanesh.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Slaanesh</div>
+                                <div class="card-title fey-plname">Slaanesh</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -86,7 +100,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/supair.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Supair</div>
+                                <div class="card-title fey-plname">Supair</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -95,7 +109,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/felix.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Jae Hong</div>
+                                <div class="card-title fey-plname">Jae Hong</div>
                                 <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
                             </div>
                         </div>  
@@ -104,7 +118,7 @@
                         <div class="card h-100">
                             <img src="assets/css/images/skipp.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <div class="card-title">Skipp</div>
+                                <div class="card-title fey-plname">Skipp</div>
                                 <div class="card-text">He claimed to have retired from lasertag, still he suddenly reappears in the dark 
                                 when the stars align to create havoc in your defence. 
                                 </div>
