--- a/tournaments.html
+++ b/tournaments.html
@@ -33,6 +33,27 @@
             </div>
         </section>
     </header>
+    <main>
+    <h2>Tournaments hosted by Zone031</h2>
+    <section>
+        <h3>Masters Meeting</h3>
+        <p>
+        Masters Meeting is an annual team competition quad tournament. The tournament has been around for two decades
+        and is together with The Gathering in Stockholm one of the two main open tournaments in Sweden. 
+        </p>
+        <iframe src="https://player.twitch.tv/?video=538676359&parent=https://marcusaureliuslinden.github.io/zone031-test/tournaments.html" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        <iframe src="https://player.twitch.tv/?video=538676359&parent=https://marcusaureliuslinden.github.io/zone031-test/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        <iframe src="https://player.twitch.tv/?video=538676359&parent=https://marcusaureliuslinden.github.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+    </section>
+    <section>
+        <h3>Double Trouble</h3>
+        <p>
+        Double trouble was a small tournament played in the summer of 2020. The tournament was played on four different doubles formats.
+        </p>
+        <iframe src="https://player.twitch.tv/?video=667798701&parent=www.gitpod.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+
+    </section>
+    </main>
     
     </body>
 </html>
