add about us content and structure & fix dropdowns

--- a/aboutus.html
+++ b/aboutus.html
@@ -33,8 +33,55 @@
             </div>
         </section>
     </header>
-
+    <main>
+        <h2>About us</h2>
+        <p>Zone031 is a laser tag club founded in 2009. We operate independently on the premises of Laserdome Hisingen. We host
+        regular training activities on Tuesdays, Thursdays and Sundays starting from 18:45. We have decades and decades of 
+        lasertag experience put together and are dedicated to introducing the sport to new players. If you are interested in
+        trying out competetive laser tag, do not hesitate to contact us. The easiest way to do that is to send us a message
+        on <a href="https://www.facebook.com/Zone031" target="_blank">facebook!</a>  
+        </p>
+        <h3>Current committee</h3>
+        <div class="row row-cols-1 row-cols-md-3"> 
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title">President - Marcus Lindén</div>
+                                <div class="card-text">Marcus is the current President of Zone031. He is 28 years old and has played laser
+                                tag for over half of his life and has been part of the club since its inception. 
+                                If you have any queries, feel free to drop him an email at: gottemaja@gmail.com
+                                </div>
+                            </div>
+                        </div> 
+                    </div>  
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">Treasurer - Andreas Kent</div>
+                                    <div class="card-text">Andreas is the long serving treasurer of Zone031. He is 3? years old and has been
+                                    playing laser tag for most of his life. He is one of the founders of the club and is also the main organiser
+                                    for the competitions that we host.</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">Secretary - Paulina Lager Löfgren</div>
+                                    <div class="card-text">Paulina is our current secretary. She is 18 years old and has been playing laser tag
+                                    for just couple of years. She is very dedicated to the sport. She also does a lot of Zone031's social media 
+                                    work.</div>
+                                </div>
+                            </div> 
+                        </div>
+                </div>
+    </main>
     
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     </body>
 </html>
