--- a/piraya.html
+++ b/piraya.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css2?family=Monoton"/>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
@@ -14,7 +15,7 @@
     <header>
         <section>
         <section>
-            <h1 id="header-logo-piraya">Piraya</h1>
+            <h1 id="header-logo-feydakin">Feydakin</h1>
         </section>
             <div>
                 <ul id="nav" class="nav nav-tabs">
@@ -24,8 +25,8 @@
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
                     <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle you-are-here" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
-                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
-                            <a href="piraya.html" class="dropdown-item you-are-here">Piraya</a>
+                            <a href="feydakin.html" class="dropdown-item you-are-here">Feydakin</a>
+                            <a href="piraya.html" class="dropdown-item">Piraya</a>
                         </div>
                     </li>
                     <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
@@ -33,19 +34,108 @@
             </div>
         </section>
     </header>
-    <section>
-        <h2>Players</h2>
-        <div class="col-md-4 player-card">
-            <div>
-                
-            </div>
-        </div>
-    </section>
-    <section>
-        <h2>History</h2>
-        <p>
-            Stuff. A lot of stuff.
-        </p>
-    </section>
+    <main  id="feydakin-main">
+        <section>
+            <h2>Feydakin</h2>
+                <p>
+                The mythos of the Feydakin players is as dark as the arena during power failure. The earthly counterpart to 
+                the death commandos Fedaykin of Arrakis, Feydakin excel at splitting defences, destroying bases and eliminating 
+                their opponents. 
+                </p>
+                <p>
+                Feydakin boasts almost a century of collective player experience. As well as being some of the best players in the world,
+                every Feydakin player is also an innovator having honed and developed a unique playstyle from scratch.
+                </p>
+        </section>
+
+        <section>
+            <h2>Players</h2>
+                <div class="row row-cols-1 row-cols-md-3"> 
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Mumin (C)</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Bambi</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/smiley.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Smiley</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/jag.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Gottemaja</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/slaanesh.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Slaanesh</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/supair.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Supair</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/felix.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Jae Hong</div>
+                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="col mb-4"> 
+                        <div class="card h-100">
+                            <img src="assets/css/images/skipp.jpg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <div class="card-title fey-plname">Skipp</div>
+                                <div class="card-text">He claimed to have retired from lasertag, still he suddenly reappears in the dark 
+                                when the stars align to create havoc in your defence. 
+                                </div>
+                            </div>
+                        </div>  
+                    </div>
+                </div>     
+        </section>
+        <section>
+            <h2>History</h2>
+            <p>
+                Stuff. A lot of stuff.
+             </p>
+        </section>
+    </main>
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
