--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta name="description" content="zone031">
     <meta name="keywords" content="lasertag, laser tag, gothenburg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
@@ -27,7 +26,12 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="feydakin.html" class="nav-link">Feydakin</a></li>
+                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
+                        <div class="dropdown-menu">
+                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                            <a href="piraya.html" class="dropdown-item">Piraya</a>
+                        </div>
+                    </li>
                     <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
                 </ul>
             </div>
@@ -35,13 +39,17 @@
     </header>
     <div class="container-fluid row">
         <div class="col-md-6">
-            <h1>Welcome to Zone031!</h1>
-            <p>Zone031 is a lasertag association based in Gothenburg, Sweden. We actively work to promote lasertag as a sport 
-            and are always keen to recruit new members. 
-            </p>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitch"></i>
-            <i class="fab fa-instagram"></i>
+            <div>
+                <h1>Welcome to Zone031!</h1>
+                <p>Zone031 is a laser tag club based in Gothenburg, Sweden. We actively work to promote laser tag as a sport 
+                and are always keen to recruit new members. 
+                </p>
+            </div>
+            <div> 
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fab fa-facebook"></i><span>Follow us on Facebook!</span></a>
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fab fa-twitch"></i><span>Follow us on Twitch!</span></a>
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fab fa-instagram"></i><span>Follow us on Instagram!</span></a>
+            </div>
         </div>
         <div class="col-md-6">
             <iframe id="facebook-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
@@ -68,5 +76,8 @@
         </div>
     
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
